adds general usage docs

--- a/src/stories/general-usage.stories.mdx
+++ b/src/stories/general-usage.stories.mdx
@@ -2,6 +2,16 @@ import { Meta } from "@storybook/addon-docs/blocks";
 
 <Meta title="Intro/General Usage" />
 
+# Getting Started
+
+Import the component. Use the component.
+
+```jsx
+import { Button } from "mainsail-ui";
+
+<Button text="Look at me" />;
+```
+
 # Usage Tips
 
 Mainsail UI provides some conveniences for developer experience and happiness.
