--- a/src/stories/getting-started.stories.mdx
+++ b/src/stories/getting-started.stories.mdx
@@ -93,7 +93,7 @@ Utilizing these constants in this way, not only reduce the number of [magic stri
 
 It might look more verbose at first, but **here are some benefits**:
 
-1. Less cognitive overhead for remember props and their values
+1. Less cognitive overhead for remembering props and their values
 1. Strings are prone to typos whereas improperly typed constants should fail compilation
 1. IDE Support of auto-completion
 1. Easier to change the value of the prop if the library introduces new values
