fixes some issues with disabled docs

--- a/src/stories/getting-started.stories.mdx
+++ b/src/stories/getting-started.stories.mdx
@@ -36,11 +36,11 @@ When a component has a broad selection of different styles available, these styl
 
 ## Intent vs Colors
 
-Some components (icons for example) have a small variety of colors available to use. These are accessed via the **color** prop.
+Some components (icons for example) have a small variety of colors available to use for aesthetic purposes. These are accessed via the **color** prop.
 
-Most components are designed for Mainsail-ui to be used in very specific use cases.
+For context-specific coloring, the **intent** prop is used.
 
-For context-specific coloring, the **intent** prop is used. Unlike a holistic style prop of **variant**, the _intent_ prop is _intended_ 😉 to be used to color a particular component variant for a particular use case.
+Unlike a holistic style prop of **variant**, the _intent_ prop is _intended_ 😉 to be used to alter the color of a component variant for a particular use case.
 
 _Note: In the case where any prop value is `default`, it can be omitted_
 
