--- a/src/stories/react-getting-started.stories.mdx
+++ b/src/stories/react-getting-started.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Canvas } from "@storybook/addon-docs/blocks";
 import { Button } from "../components/Button";
 import { Icon } from "../components/Icon";
 
-<Meta title="Intro/Getting Started" />
+<Meta title="React/Getting Started" />
 
 # Getting Started
 
