includes the css dist files

--- a/src/stories/_css-getting-started.stories.mdx
+++ b/src/stories/_css-getting-started.stories.mdx
@@ -6,22 +6,28 @@ import "../components/core/index.scss";
 
 <Meta title="CSS Only/Getting Started" order={1} />
 
-# Using Mainsail as a CSS Library
+# Using Mainsail as a CSS-Only Library
 
-## Table of Contents
+🚨 **If you're looking to get started with the React Library [go here!](?path=/story/react-getting-started--page)** 🚨
 
--   [Usage](#usage)
+This page is only for those looking to use the **css-only** version of Mainsail UI.
 
 # Usage
 
 You may use the Mainsail CSS library externally from the [unpkg](https://unpkg.com/) cdn.
 
 ```html
-<script src="https://unpkg.com/mainsail-ui/dist/css/mainsail.min.css"></script>
+<link
+    rel="stylesheet"
+    href="https://unpkg.com/mainsail-ui/dist/css/mainsail.min.css"
+/>
 ```
 
 A specific release version can be specified by following the conventions listed at [unpkg.com](https://unpkg.com).
 
 ```html
-<script src="https://unpkg.com/mainsail-ui@<version-here>/dist/css/mainsail.min.css"></script>
+<link
+    rel="stylesheet"
+    href="https://unpkg.com/mainsail-ui@<version>/dist/css/mainsail.min.css"
+/>
 ```
