--- a/src/stories/css-components.stories.mdx
+++ b/src/stories/css-components.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
+import { FullList } from "../components/Icon/Icon.stories.js";
 
 import "../components/core/index.scss";
 
@@ -168,6 +169,13 @@ There are **3 color** variants available `default` `light` and `dark`.
             />
         </svg>
     </span>
+</Canvas>
+
+<Canvas>
+    <>
+        <h3>Full Icon List</h3>
+        <FullList allowCopy />
+    </>
 </Canvas>
 
 ## Spinner
