minor improvements to css only docs

--- a/src/stories/css-colors.stories.mdx
+++ b/src/stories/css-colors.stories.mdx
@@ -10,7 +10,7 @@ Mainsail color classes are available.
 
 ## Background Colors
 
-Apply Mainsail color to text `background-color:` css property.
+Apply Mainsail color to background `background-color:` css property.
 
 ```html
 <div class="bg-blue-primary p-8">bg-blue-primary</div>
