--- a/src/stories/css-utility.stories.mdx
+++ b/src/stories/css-utility.stories.mdx
@@ -77,7 +77,15 @@ If desired, you can supply `x` or `y` to apply to both sides.
 Box shadows can be applied easily with the shadow utility.
 
 ```html
-<div class="px-15 py-8">Shadow Box</div>
+<div class="box-shadow-near">
+    Box Shadow Near
+</div>
+<div class="box-shadow-far">
+    Box Shadow Far
+</div>
+<div class="box-shadow-sticky">
+    Box Shadow Sticky Bar
+</div>
 ```
 
 <Canvas>
