improves icon css-only verbiage

--- a/src/stories/css-components.stories.mdx
+++ b/src/stories/css-components.stories.mdx
@@ -73,7 +73,7 @@ Buttons have variants and intent styles available as sub classes.
 
 ## Icons
 
-Icon svg files may be added directly to the html code and have styling and sizing classes ready to go in Mainsail css.
+Icon svg files may be added directly to the html code and have size and color classes available.
 
 **How to use Mainsail icons directly:**
 
