--- a/src/stories/css-components.stories.mdx
+++ b/src/stories/css-components.stories.mdx
@@ -117,7 +117,7 @@ Icon svg files may be added directly to the html code and have size and color cl
 **How to use Mainsail icons directly:**
 
 1. Create a wrapping element. `<span class="mainsail-icon lg default"></span>`
-1. Copy and paste the desired svg code inside it (copy from react component [Full List](?path=/story/elements-icon--full-list)).
+1. Copy and paste the desired svg code inside it (copy from the [Full List](#icon-list)).
 
 You need to just provide a wrapping element to the svg tag with the desired style classes.
 
@@ -210,11 +210,10 @@ There are **3 color** variants available `default` `light` and `dark`.
     </span>
 </Canvas>
 
+### Icon List
+
 <Canvas>
-    <>
-        <h3>Full Icon List</h3>
-        <FullList allowCopy />
-    </>
+    <FullList allowCopy />
 </Canvas>
 
 ## Spinner
