--- a/src/stories/react-getting-started.stories.mdx
+++ b/src/stories/react-getting-started.stories.mdx
@@ -12,6 +12,10 @@ Import the component. Use the component.
 import { Button } from "mainsail-ui";
 
 <Button text="Look at me" />;
+
+// or with children
+
+<Button>Look at me</Button>;
 ```
 
 # Usage
