--- a/src/stories/css-components.mdx
+++ b/src/stories/css-components.mdx
@@ -12,6 +12,7 @@ import "../components/core/index.scss";
 -   [Buttons](#buttons)
 -   [Icons](#icons)
 -   [Spinner](#spinner)
+-   [Badge](#badge)
 
 ## Buttons
 
@@ -248,4 +249,41 @@ It requires a small amount of markup:
         <div class="bounce2"></div>
         <div class="bounce3"></div>
     </div>
+</Canvas>
+
+## Badge
+
+For calling specific attention to a piece of text or data.
+
+The badge has **2 variants** "basic" and "removable".
+
+It requires a small amount of markup:
+
+```html
+<span class="mainsail-badge bg-neutral-5 text-neutral-2 sm basic square"
+    >Badge</span
+>
+```
+
+<Canvas>
+    <span class="mainsail-badge bg-neutral-5 text-neutral-2 sm basic square">
+        Badge
+    </span>
+    <span class="mainsail-badge bg-blue-light text-blue-middle sm removable square">
+        Removable
+        <button>
+            <span role="img" class="mainsail-icon sm default text-blue-middle">
+                <svg
+                    width="1em"
+                    height="1em"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M14.81 2.082a.59.59 0 00.19-.446.622.622 0 00-.19-.455.606.606 0 00-.446-.181.64.64 0 00-.456.18L8 7.099 2.082 1.181A.606.606 0 001.636 1a.64.64 0 00-.455.18.64.64 0 00-.181.456c0 .176.06.325.18.446L7.099 8l-5.917 5.908a.64.64 0 00-.181.456c0 .175.06.324.18.445.128.128.28.191.456.191a.59.59 0 00.446-.19L8 8.9l5.908 5.908c.128.128.28.191.456.191a.59.59 0 00.445-.19.59.59 0 00.191-.446.622.622 0 00-.19-.456L8.9 8l5.908-5.918z"
+                        fill="currentColor"></path>
+                </svg>
+            </span>
+        </button>
+    </span>
 </Canvas>
