adds new getting started dev documentation
- refactors docs to dev/usage

--- a/src/stories/usage/react-getting-started.stories.mdx
+++ b/src/stories/usage/react-getting-started.stories.mdx
@@ -1,8 +1,8 @@
 import { Meta, Canvas } from "@storybook/addon-docs/blocks";
-import { Button } from "../components/Button";
-import { Icon } from "../components/Icon";
+import { Button } from "../../components/Button";
+import { Icon } from "../../components/Icon";
 
-<Meta title="React/Getting Started" />
+<Meta title="React/Usage/Getting Started" />
 
 # Getting Started
 
