revises dev docs

--- a/src/stories/dev/0-react-dev-getting-started.stories.mdx
+++ b/src/stories/dev/0-react-dev-getting-started.stories.mdx
@@ -91,6 +91,6 @@ Note: Currently only VS Code instructions exist. If plugins exist for your prefe
 
 ## Review Some Project Design Decisions
 
-It is recommended to read over some conventions chosen for the Mainsail-UI library before diving in.
+Before you start contributing any new code, review our conventions.
 
-See [Conventions](./?path=/docs/react-developing-conventions--page)
+See [Coding Style Guide](./?path=/docs/react-developing-style-guide--page)
