--- a/src/stories/dev/1-react-dev-editors.stories.mdx
+++ b/src/stories/dev/1-react-dev-editors.stories.mdx
@@ -28,7 +28,7 @@ Once installed (an app restart may be necessary), you should see linting take pl
 
 ![image](https://user-images.githubusercontent.com/30707961/107783977-e5fae580-6d18-11eb-9894-fff68d201db4.png)
 
-**Inline example**
+**Inline Example**
 
 Boolean prop type naming is enforced by eslint.
 
@@ -43,7 +43,7 @@ files inline while coding without having to do any extra effort. This will resul
 
 # Troubleshooting 🚨
 
-### I got nothing going on (ESLINT / PRETTIER)
+### I've got nothing going on (ESLINT / PRETTIER)
 
 **Did you install the plugin for VS Code?**
 
