--- a/src/stories/dev/2-react-style-guide.stories.mdx
+++ b/src/stories/dev/2-react-style-guide.stories.mdx
@@ -1,34 +1,44 @@
 import { Meta, Canvas } from "@storybook/addon-docs/blocks";
 
-<Meta title="React/Developing/Conventions" />
+<Meta title="React/Developing/Dev Style Guide" />
 
-# Conventions
+# Style Guide & Principles
 
-There are some some common conventions and presiding principles with which this library has been constructed.
+There are some common conventions and presiding principles with which this library has been constructed.
 
-## Code style
+## Code Style
 
 The library uses Prettier code styling for simplicity. Nothing else to report here.
 
-## Naming things
+## Naming Things
 
-When it comes to naming conventions, there are two primary driving motivations behind all naming choices:
+When it comes to naming conventions, there are a some primary driving motivations behind all naming choices:
 
--   Readability/Reason-Ability
--   Explicitness/Specificity
+-   **Readability** - keep it readable
+-   **Reason-Ability** - keep it able to be immediately reasoned with
+-   **Explicitness** - leave nothing ambiguous, "future me is dumb"
+-   **Specificity** - ordering of context can create clearer code
 
-### Readability / Reason-Ability / Explicitness
+## Readability / Reason-Ability / Explicitness with Props
 
-Ideally, developers should be able to immediately look at a prop and understand what it is for without reading the docs. Prop names should immediately denote what they are for and set out to do. Favor verbosity (within reason). We want to make our code easy to reason about.
+Ideally, developers should be able to immediately look at a component prop and understand what it is for without reading the docs.
 
-Most of the issues that we are attempting to alleviate with these conventions are safeguarded against simply by using `prop-types`. Even though `prop-types` are used on **every React component** in this library, we still strive for these patterns because they aid in consistency and an improved developer experience.
+Prop names should immediately denote what they are used for and set out to do. Favor verbosity (within reason). We want to make our code easy to reason about.
 
-Here are some general guidelines when naming props:
+Most of the issues that we are attempting to alleviate with these conventions are safeguarded against simply by using `prop-types` and a little help from ESLINT.
+
+Even though `prop-types` are used on **every React component** in this library, we still strive for these patterns because they aid in consistency and an improved developer experience.
+
+Many editors benefit from including prop-types.
+
+![VS Code auto completion](https://user-images.githubusercontent.com/30707961/114555435-b04d7c80-9c35-11eb-844e-ab7cb40fdeaf.gif)
+
+## Example Guidelines when Naming Props
 
 **DO NOT 🚫**
 
 ```js
-// Context of this is ambiguous, make sure this is not an action/event/callback
+// Context of this verb is ambiguous, is this is not an action/event/callback?
 update;
 ```
 
@@ -66,29 +76,30 @@ loading;
 **DO ✅**
 
 ```js
-isLoading; // prefixing boolean props with "is" can help immediately infer that this should expect a boolean.
+// prefixing boolean props with "is" can help immediately infer that this should expect a boolean.
+isLoading;
 ```
 
 **DO NOT 🚫**
 
 ```js
-person; // this prop might be expecting an object, if a name or id is expected, specify that explicitly (see next section)
+// this prop might be expecting an object, if a name or id is expected, specify that explicitly (see next section)
+person;
 ```
 
 **DO ✅**
 
 ```js
-personId; // if this prop expects an "id", name it as such. (Note: we use camelCase, unless a class or component name)
+// if this prop expects an "id", name it as such. (Note: we use camelCase, unless a class or component name where PascalCase is used)
+personId;
 ```
 
 **DO NOT 🚫**
 
 ```js
-person = "Bob";
 // without knowing assignment, the prop here doesn't tell us that it should be a string, the prop could be expected to receive an object
+person = "Bob";
 ```
-
-> ! This applies to file names as well. Structuring files this way will keep them organized and ordered by file systems.
 
 **DO ✅**
 
@@ -96,9 +107,9 @@ person = "Bob";
 personName = "Bob"; // Obviously a name should be expected
 ```
 
-### Specificity
+## Specificity
 
-Ordering specificity
+Ordering specificity by context
 
 **DO NOT 🚫**
 
@@ -126,11 +137,13 @@ Ordering specificity
 /*
 This specificity ordering convention makes more sense in the context of a group of named items.
 By itself `mainsail-light-blue` doesn't seem too egregious. If combined with others of similar nomenclature,
-coding/sorting benefits emerge by inverting theses specificity values.
+coding/sorting benefits emerge by inverting theses specificity values to `mainsail-blue-light`.
 */
 ```
 
-### Enumerable Props
+> 📂 This applies to file names as well. Structuring files this way will keep them organized and ordered by file systems.
+
+## Enumerable Props
 
 The decision has been made to provide a convention to mitigate [magic string](https://softwareengineering.stackexchange.com/questions/365339/what-is-wrong-with-magic-strings) usage in/for this library.
 
@@ -150,14 +163,14 @@ For Example:
 
 Usage of the prop could be handled by passing a string of "primary" but it is actually better to provide a means for the end-user-developer to not have to use strings at all for their prop if we can.
 
-"But why?" You might ask.
+_"But why?"_ You might ask.
 
 Magic strings are prone to causing bugs. These bugs are likely to only surface at runtime. Here's some quick benefits
 
 -   If you type a string wrong, you likely won't discover it until the component renders and maybe not until it hits production
 -   Autocomplete in most editors is provided by supplying enums/objects
--   Find/Replace becomes easier when not using strings
--   Developer friendliness increases as you need to consult the docs less
+-   Find/Replace becomes easier/more accurate when not using strings
+-   Developer friendliness increases as you need to consult the docs less with prop key/values
 
 Setup may look like this:
 
@@ -165,12 +178,14 @@ Setup may look like this:
 // Button.js
 ...
 
-export const variants = {
-    primary: "primary",
-    secondary: "secondary",
-    tertiary: "tertiary",
-    link: "link",
-    icon: "icon",
+export const ENUMS = {
+    variants: {
+        primary: "primary",
+        secondary: "secondary",
+        tertiary: "tertiary",
+        link: "link",
+        icon: "icon",
+    }
 };
 
 ...
@@ -182,11 +197,11 @@ Usage may look like this:
 
 ```js
 // Button.stories.js
-import { Button, variants } from "./Button";
+import { Button, ENUMS } from "./Button";
 
 export const Primary = Template.bind({});
 Primary.args = {
-    variant: variants.primary,
+    variant: ENUMS.variants.primary,
     text: "Click me",
 };
 ```
