--- a/src/stories/dev/1-react-dev-editors.stories.mdx
+++ b/src/stories/dev/1-react-dev-editors.stories.mdx
@@ -6,6 +6,9 @@ import { Icon } from "../../components/Icon";
 
 # Configuring Your Editor
 
+-   [VS Code Setup](#setup-for-vs-code-img-srchttpsuser-imagesgithubusercontentcom30707961107785711-ed22f300-6d1a-11eb-8c7f-c78bde3d014dpng-styledisplay-inline-width20-)
+-   [Troubleshooting](#troubleshooting-)
+
 To aid in consistency and accuracy, Mainsail-UI utilizes [eslint](https://eslint.org/) and [prettier](https://prettier.io/).
 
 To get the most out of these, we (strongly) **recommend** you use an editor that supports [eslint](https://eslint.org/) and [prettier](https://prettier.io/) usage via plugins. This will allow you to format on save and see realtime feedback about what may possibly be wrong with your code.
@@ -14,13 +17,13 @@ To get the most out of these, we (strongly) **recommend** you use an editor that
 
 ## Setup for VS Code <img src="https://user-images.githubusercontent.com/30707961/107785711-ed22f300-6d1a-11eb-8c7f-c78bde3d014d.png" style={{display: "inline"}} width="20" />
 
-Once you run `yarn install` on the project, you should have the necessary linters and plugins for the project **but** you will still need to install the editor plugin to enable operation during editing.
+Once you run `yarn install` on the project, you should have the necessary linters and plugins for the project **but** you will still need to **install the editor plugins** to enable operation during editing.
 
-### Install the Editor Plugins
+## Install the Editor Plugins
 
 -   [ESlint Plugin](https://github.com/Microsoft/vscode-eslint): recommended for linting VS Code.
 -   [Prettier Plugin](https://github.com/prettier/prettier-vscode): recommended for _format on save_ functionality.
--   [Jest Plugin](https://marketplace.visualstudio.com/items?itemName=Orta.vscode-jest)
+-   [Jest Plugin](https://marketplace.visualstudio.com/items?itemName=Orta.vscode-jest): recommended for inline test running
 
 Once installed (an app restart may be necessary), you should see linting take place inline and this can also be confirmed by opening your terminal with <kbd>ctrl</kbd> + <kbd>~</kbd> and you should see the **PROBLEMS** tab display output (if there's an actual issue). You can test this by naming a prop wrong (see previous screen).
 
@@ -43,7 +46,7 @@ files inline while coding without having to do any extra effort. This will resul
 
 # Troubleshooting 🚨
 
-### I've got nothing going on (ESLINT / PRETTIER)
+## I've got nothing going on (ESLINT / PRETTIER)
 
 **Did you install the plugin for VS Code?**
 
