fixes inconsistent name with dev docs

--- a/src/stories/dev/2-react-style-guide.stories.mdx
+++ b/src/stories/dev/2-react-style-guide.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Canvas } from "@storybook/addon-docs/blocks";
 
-<Meta title="React/Developing/Dev Style Guide" />
+<Meta title="React/Developing/Coding Style Guide" />
 
 # Style Guide & Principles
 
