renames stories to docs

--- a/src/docs/dev/0-react-dev-getting-started.stories.mdx
+++ b/src/docs/dev/0-react-dev-getting-started.stories.mdx
@@ -70,7 +70,7 @@ src
 |  ├─ fonts (for use locally in storybook - not bundled)
 |  └─ icons (original source svgs - has icon build process)
 ├─ components
-├─ stories (for documentation only)
+├─ docs (for storybook documentation only)
 ├─ styles (global scss files)
 |  ├─ Colors.scss   (color-related configurations)
 |  ├─ Layout.scss   (utility classes for spacing/layout)
