adds some story clarity to docs for writing stories

--- a/src/docs/dev/3-react-building-a-component.stories.mdx
+++ b/src/docs/dev/3-react-building-a-component.stories.mdx
@@ -123,6 +123,12 @@ yarn start
 -   able to provide a means of visual/functional operational testing on a unit and integration level
 -   just an exported react component (which means, you can use React and javascript to do whatever you want with it)
 
+**❓ What deserves a Story?**
+
+-   if the component is supposed to behave a certain way, make a story for that behavior
+-   if you want to write a test for a specific behavior or action, make a story first (writing tests will be easier!)
+-   if you want to visually test a design aspect, make a story that displays that design (chromatic will visually diff changes off of stories)
+
 Stories have a scaffolded initial structure.
 
 ```jsx
