adds initial transition component support

--- a/src/docs/dev/2-react-style-guide.stories.mdx
+++ b/src/docs/dev/2-react-style-guide.stories.mdx
@@ -76,7 +76,7 @@ loading;
 **DO ✅**
 
 ```js
-// prefixing boolean props with "is" can help immediately infer that this should expect a boolean.
+// prefixing boolean props with "is/has/should" can help immediately infer that this should expect a boolean.
 isLoading;
 ```
 
