--- a/src/docs/usage/1-css-utilities.stories.mdx
+++ b/src/docs/usage/1-css-utilities.stories.mdx
@@ -10,14 +10,21 @@ Mainsail comes with a few utility classes for working within the Mainsail design
 
 ## Why Utility Classes?
 
-Because adding bespoke CSS per component for things that are constantly repeated adds to the "append-only" nature of our CSS footprint.
+Adding bespoke CSS per component for things that are constantly repeated adds to the "append-only" nature and unnecessary size of our CSS footprint.
 
 Applying the 80/20 principle, having these classes available helps us to get the 80% done with 20% of the code. (Where the 80% is common use cases for positioning, layout and style ... and the 20% can likely be reused throughout the app.)
+
+## Eww, how are these better than inline styles?
+
+Utility classes are a fairly common styling pattern that offers [many benefits over inline styles](https://frontstuff.io/no-utility-classes-arent-the-same-as-inline-styles).
+
+The utilities listed on this page are modeled after the very popular [Tailwind CSS](https://2020.stateofcss.com/en-US/technologies/css-frameworks/).
+There are a number of differences, however. For example, not everything has responsive class designations baked-in. Mainsail only includes a small subset of the abilities of Tailwind to save on bundle size.
 
 ## What's available?
 
 -   [Colors](#colors)
--   [Spacing](#spacing) (Margins/Padding)
+-   [Spacing](#spacing) (margins/padding with responsive designations available)
 -   [Shadows & Overlays](#shadows--overlays)
 -   [Typography](#typography)
 
@@ -155,6 +162,25 @@ If desired, you can supply `x` or `y` to apply to both sides.
         <div class="bg-blue-light p-8 mt-20">mt-20</div>
         <div class="bg-blue-light p-8 mt-30">mt-30</div>
         <div class="bg-blue-light p-8 mt-48">mt-48</div>
+    </div>
+</Canvas>
+
+### Responsive Spacing
+
+Responsive designations for spacing can be applied. The syntax looks like `<breakpoint>:<class>`
+
+```jsx
+<div className="bg-blue-light p-8 sm:mt-8 md:mt-20 lg:mt-30">mt-48</div>
+```
+
+<Canvas>
+    <div class="body-text">
+        <span class="m-0">
+            Margin with 8px at small, 20px at medium and 30 at large (resize
+            browser window to see)
+        </span>
+        <div class="bg-neutral-1 p-4"></div>
+        <div class="bg-blue-light p-8 sm:mt-8 md:mt-20 lg:mt-30">mt-48</div>
     </div>
 </Canvas>
 
